solves GA with parcel bundler copy pasta from Github cf readme.md

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="./style.css" />
   <title>RPW Layout</title>
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148764400-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    window.gtag = function gtag(){dataLayer.push(arguments);} // <-- note `window.gtag =`
+    gtag('js', new Date());
+
+    gtag('config', 'UA-148764400-1');
+  </script>
 
 </head>
 
