--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./style.css" />
   <title>RPW Layout</title>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148764400-1"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148764400-1"></script> -->
 <script>
   window.dataLayer = window.dataLayer || [];
   window.gtag = function gtag(){dataLayer.push(arguments);} // <-- note window.gtag =
